src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__bash_sibling_bool_sequences.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 4.0,
  "average": 4.0,
  "min": 0.0,
  "max": 4.0
}
