src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__csharp_switch_statement.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 1.0,
  "average": 1.0,
  "min": 0.0,
  "max": 1.0
}
