src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__elixir_boolean_sequence.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 3.0,
  "average": null,
  "min": 3.0,
  "max": 3.0
}
