src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__elixir_cond_counts_once.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 1.0,
  "average": null,
  "min": 0.0,
  "max": 1.0
}
