src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__elixir_if_else.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 2.0,
  "average": null,
  "min": 0.0,
  "max": 2.0
}
