src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__elixir_nested_if_amplifies.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 3.0,
  "average": null,
  "min": 0.0,
  "max": 3.0
}
