src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__elixir_try_rescue_catch.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 2,
  "value": 0,
  "average": 2.0,
  "min": 0,
  "max": 2
}
