src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__lua_sibling_bool_sequences.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 4,
  "average": 4.0,
  "min": 0,
  "max": 4
}
