src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__perl_sibling_bool_sequences.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 3.0,
  "average": 3.0,
  "min": 0.0,
  "max": 3.0
}
