src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__php_2_level_nesting.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 6,
  "average": 6.0,
  "min": 0,
  "max": 6
}
