src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__php_break_continue.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 5,
  "average": 5.0,
  "min": 0,
  "max": 5
}
