src/metrics/snapshots/big_code_analysis__metrics__cognitive__tests__php_goto_counted.snap
---
source: src/metrics/cognitive.rs
expression: metric.cognitive
---
{
  "sum": 2.0,
  "average": 2.0,
  "min": 0.0,
  "max": 2.0
}
